fixed services text misalignment on smaller resolutions, footer and hero social icons now match sizes

--- a/src/components/Home/HomeHero.module.scss
+++ b/src/components/Home/HomeHero.module.scss
@@ -181,7 +181,7 @@
     gap: clamp(16px, 1.1vw, 20px);
   }
   .socialIcon {
-    width: clamp(31px, 2vw, 37px);
+    width: clamp(32px, 2vw, 37px);
   }
 }
 @media screen and (max-width: 1350px) {
@@ -210,7 +210,7 @@
     filter: brightness(0.4);
   }
   .socialIcon {
-    width: clamp(30px, 2.4vw, 31px);
+    width: clamp(30px, 2.4vw, 32px);
   }
 }
 @media screen and (max-width: 1100px) {
@@ -274,7 +274,9 @@
   }
   .socials {
     flex-direction: row;
+    align-items: center;
     gap: clamp(13px, 0vw, 16px);
+
     margin-left: clamp(40px, 4.9vw, 50px);
   }
   .socialIcon {
@@ -325,11 +327,11 @@
     margin: clamp(38px, 10.8vw, 43px) 0px clamp(90px, 30vw, 120px) 2px;
   }
   .socials {
-    margin-left: clamp(35px, 10vw, 40px);
-    gap: clamp(11px, 3.3vw, 13px);
+    margin-left: clamp(25px, 9.7vw, 40px);
+    gap: clamp(8px, 2.8vw, 13px);
   }
   .socialIcon {
-    width: clamp(30px, 8.3vw, 33px);
+    width: clamp(32px, 8.3vw, 33px);
   }
   .image {
     width: clamp(75px, 29.9vw, 120px);
